--- a/.pylintrc
+++ b/.pylintrc
@@ -426,7 +426,8 @@ disable=raw-checker-failed,
         global-statement, # we could enable later
         global-variable-not-assigned, # we could enable later
         dangerous-default-value,
-        missing-class-docstring
+        missing-class-docstring,
+        too-many-positional-arguments
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
